--- a/app/views/shared/_pinned_pages_menu.html.erb
+++ b/app/views/shared/_pinned_pages_menu.html.erb
@@ -14,14 +14,14 @@
   <!-- Pinned pages menu -->
   <div
     data-pinned-pages-menu-target="menu"
-    class="pointer-events-none absolute right-0 top-12 z-50 w-72 origin-top-right scale-75 rounded-lg bg-white p-2 pb-0.5 opacity-0 shadow-md transition duration-200 ease-in-out dark:bg-slate-800 border border-slate-300 dark:border-slate-700 dark:shadow-none"
+    class="pointer-events-none absolute right-0 top-12 z-50 w-72 origin-top-right scale-75 rounded-lg bg-slate-50 p-2 pb-0.5 opacity-0 shadow-md transition duration-200 ease-in-out dark:bg-slate-800 border border-slate-300 dark:border-slate-700 dark:shadow-none"
   >
-    <div class="relative max-h-80 overflow-y-auto pb-4">
+    <div class="relative max-h-80 overflow-y-auto hide-scrollbar">
       <%= render 'pinned_pages/list' %>
-    </div>
 
-    <!-- Gradient overlay to hide the menu when scrolling -->
-    <div class="absolute bottom-0 left-0 right-0 h-8 bg-gradient-to-t from-white dark:from-slate-800 to-transparent pointer-events-none rounded-b-lg"></div>
+      <!-- Gradient overlay to hide the menu when scrolling -->
+      <div class="sticky bottom-0 h-8 bg-gradient-to-t from-slate-50 dark:from-slate-800 to-transparent pointer-events-none"></div>
+    </div>
 
     <div class="pb-1.5">
       <%= render 'pinned_pages/pin_button', page_url: request.fullpath %>
