--- a/app/assets/stylesheets/custom/buttons.css
+++ b/app/assets/stylesheets/custom/buttons.css
@@ -12,26 +12,30 @@
   }
 
   .btn-primary {
-    @apply bg-indigo-600 text-white hover:bg-indigo-700 focus:ring-indigo-600/20;
+    @apply bg-gradient-to-b from-indigo-500 to-indigo-600 hover:from-indigo-600 hover:to-indigo-700 text-white;
 
     &.btn-outline {
       @apply border border-indigo-600 bg-transparent text-indigo-600 hover:bg-indigo-600 hover:text-white;
+      background-image: none; /* Cancel the gradient */
     }
 
     &.btn-muted {
       @apply bg-indigo-100 text-indigo-700 hover:bg-indigo-200 dark:bg-indigo-900 dark:text-indigo-200 dark:hover:bg-indigo-800;
+      background-image: none; /* Cancel the gradient */
     }
   }
 
   .btn-destructive {
-    @apply bg-rose-600 text-white hover:bg-rose-700 focus:ring-rose-600/20;
+    @apply bg-gradient-to-b from-rose-500 to-rose-600 hover:from-rose-600 hover:to-rose-700 text-white;
 
     &.btn-outline {
       @apply border border-rose-600 bg-transparent text-rose-600 hover:bg-rose-600 hover:text-white;
+      background-image: none; /* Cancel the gradient */
     }
 
     &.btn-muted {
       @apply bg-rose-100 text-rose-700 hover:bg-rose-200 dark:bg-rose-900 dark:text-rose-200 dark:hover:bg-rose-800;
+      background-image: none; /* Cancel the gradient */
     }
   }
 
