--- a/app/views/teams/show/_team_info.html.erb
+++ b/app/views/teams/show/_team_info.html.erb
@@ -14,10 +14,12 @@
 >
   <div class="flex flex-wrap items-center justify-between gap-2 mb-6">
     <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-300">Season Dates</h2>
-    <button data-calendar-target="toggleButton" data-action="click->calendar#toggleCalendar" class="btn btn-white btn-sm gap-1.5">
-      <%= inline_svg_tag 'icons/calendar.svg', class: 'size-4' %>
-      <span data-calendar-target="toggleButtonText">Show Calendar</span>
-    </button>
+    <% if team.season_dates? && team.season_in_progress? %>
+      <button data-action="click->calendar#toggleCalendar" class="btn btn-primary btn-muted btn-sm gap-1.5">
+        <%= inline_svg_tag 'icons/calendar.svg', class: 'size-4' %>
+        <span data-calendar-target="toggleButtonText">Show Calendar</span>
+      </button>
+    <% end %>
   </div>
   <% if team.season_dates? %>
     <div class="block mb-4 space-y-2 lg:space-y-0 lg:flex lg:flex-wrap lg:items-center lg:justify-around lg:gap-4">
@@ -45,7 +47,7 @@
 
       <div
         data-calendar-target="calendarContainer"
-        class="hidden mt-10"
+        class="mt-10"
       >
         <div class="col-span-1 lg:col-span-2">
           <div class="flex flex-wrap items-center justify-center gap-3 mb-4 md:max-w-[80%] md:mx-auto">
