style: adjust progress bar colors

--- a/app/views/shared/_progress_bar.html.erb
+++ b/app/views/shared/_progress_bar.html.erb
@@ -18,14 +18,14 @@
       <% end %>
     </div>
   </div>
-  <div class="<%= size_classes[size] %> w-full bg-gray-200 dark:bg-gray-700 relative"
+  <div class="<%= size_classes[size] %> w-full bg-indigo-200 dark:bg-slate-700 relative"
        role="progressbar"
        aria-valuenow="<%= percentage %>"
        aria-valuemin="0"
        aria-valuemax="100"
        aria-label="<%= label %>"
     >
-    <div class="<%= size_classes[size] %> bg-indigo-500 dark:bg-indigo-600 absolute left-0 top-0 z-20 max-w-full" style="width: <%= percentage %>%"></div>
+    <div class="<%= size_classes[size] %> bg-gradient-to-b from-indigo-500 to-indigo-600 absolute left-0 top-0 z-20 max-w-full" style="width: <%= percentage %>%"></div>
     <% if local_assigns[:marker] %>
       <div class="<%= size_classes[size] + ' ' + comparison_classes %> absolute top-0 left-0 max-w-full" style="width: <%= marker %>%"></div>
     <% end %>
