fix: small slit visible underneath gradient overlay

--- a/app/views/shared/_pinned_pages_menu.html.erb
+++ b/app/views/shared/_pinned_pages_menu.html.erb
@@ -20,7 +20,7 @@
       <%= render 'pinned_pages/list' %>
 
       <!-- Gradient overlay to hide the menu when scrolling -->
-      <div class="sticky bottom-0 h-8 bg-gradient-to-t from-slate-50 dark:from-slate-800 to-transparent pointer-events-none"></div>
+      <div class="sticky -bottom-px h-8 bg-gradient-to-t from-slate-50 dark:from-slate-800 to-transparent pointer-events-none"></div>
     </div>
 
     <div class="pb-1.5">
