--- a/app/views/runs/_run_content.html.erb
+++ b/app/views/runs/_run_content.html.erb
@@ -4,9 +4,9 @@
       <%= inline_svg_tag 'icons/runner.svg', class: 'size-5 text-soft shrink-0' %>
       <p class="text-balance text-lg font-bold"><%= run.distance %> mi Run <span class="text-soft text-sm">(<%= run.distance_km %> km)</span></p>
     </div>
-    <div class="flex items-center gap-2 rounded-full bg-slate-200/50 px-3 py-1 drop-shadow-sm dark:bg-slate-700/50 dark:drop-shadow-none">
-      <%= inline_svg_tag 'icons/calendar.svg', class: 'size-4 text-soft' %>
-      <p class="text-soft whitespace-nowrap text-xs"><%= current_page?(run_path(run)) ? pretty_date(run.date, date_style: :relative) : format_date(run.date) %></p>
+    <div class="flex items-center gap-2 rounded-full px-3 py-1 bg-indigo-200 dark:bg-indigo-900 text-indigo-700 dark:text-indigo-200 font-bold drop-shadow-sm dark:drop-shadow-none">
+      <%= inline_svg_tag 'icons/calendar.svg', class: 'size-4' %>
+      <p class="whitespace-nowrap text-xs"><%= current_page?(run_path(run)) ? pretty_date(run.date, date_style: :relative) : format_date(run.date) %></p>
     </div>
   </div>
 
