--- a/app/views/teams/member.html.erb
+++ b/app/views/teams/member.html.erb
@@ -9,7 +9,7 @@
 
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
       <!-- Team Card -->
-      <%= link_to @team, data: { turbo: false }, class: 'group' do %>
+      <%= link_to @team, class: 'group' do %>
         <div class="card">
           <p class="mb-3 text-lg font-semibold text-slate-700 dark:text-slate-300 lg:text-center">Team</p>
           <div class="flex items-center gap-4 shrink-0">
@@ -29,7 +29,7 @@
       <% end %>
 
       <!-- Member Card -->
-      <%= link_to @member, data: { turbo: false }, class: 'group' do %>
+      <%= link_to @member, class: 'group' do %>
         <div class="card">
           <p class="mb-3 text-lg font-semibold text-slate-700 dark:text-slate-300 lg:text-center">Member</p>
           <div class="flex items-center gap-4 shrink-0">
